--- a/src/components/UiTimeControls/UiTimeControls.scss
+++ b/src/components/UiTimeControls/UiTimeControls.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables";
 
 .UiTimeControls {
-  padding-top: 2px;
+  //  padding-top: 2px;
   display: inline-flex;
   cursor: pointer;
   user-select: none;
