--- a/src/styles/_ui.scss
+++ b/src/styles/_ui.scss
@@ -3,7 +3,7 @@
 .ui-responsive-chart-wrapper {
   width: 100%;
   max-width: 748px;
-  background-color: $greyLight;
+  //  background-color: $greyLight;
 }
 
 .ui-button-wrapper {
