--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,53 +9,23 @@ $borderLight: #fa9a5c;
 
 .Header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-direction: row;
-  margin: 1rem 0;
-  line-height: 1.3;
+  margin: 0 0 1rem;
   border-width: 2px;
   border-style: solid;
   border-color: $borderLight $borderDark $borderDark $borderLight;
   background-color: $orange;
-  height: 32px;
-  .box-outline {
-    width: 100%;
-    padding: 3px 8px;
-    //    height: 30px;
-  }
-
-  .header-contents {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 12px;
-  }
+  padding: 0.2rem 0.5rem;
 
   a {
     text-decoration: none !important;
   }
 
-  h2 {
-    //    padding-top: 3px;
-    color: #282828 !important;
-    font-size: 20px;
-    margin: 0;
+  h1.site-title {
     flex: 1;
-  }
-  span {
-    display: inline-block;
-  }
-}
-
-.Header .box-outline .header-contents .title-spacer {
-  display: flex;
-  flex-direction: column;
-  gap: 2px;
-}
-.windows-chrome-edge .Header {
-  .box-outline .header-contents .title-spacer {
-    gap: 0;
-    margin-bottom: 3px;
+    margin: 0;
+    padding-bottom: 0.2rem;
   }
 }
