--- a/src/components/UiGroup/UiGroup.scss
+++ b/src/components/UiGroup/UiGroup.scss
@@ -5,11 +5,11 @@
   @include default-font;
   max-width: 768px;
   margin-bottom: 1rem;
-  line-height: 1.3;
 
   .content {
     margin-top: 0.25rem;
-    padding: 0.5rem 0.5rem;
+    padding: 1rem;
+    // padding: 0.5rem 0.5rem;
     border-left: 2px solid $grey;
     border-right: 2px solid $grey;
     border-bottom: 2px solid $grey;
@@ -27,7 +27,7 @@
 .UiGroup__child {
   max-width: 768px;
   margin-bottom: 1rem;
-  line-height: 1.3;
+  //  line-height: 1.3;
 
   .content {
     margin-top: 0.25rem;
