--- a/src/components/UiHeader/UiHeader.scss
+++ b/src/components/UiHeader/UiHeader.scss
@@ -5,38 +5,26 @@
   @include default-font;
   @include outset-border;
   background-color: $greyDark;
-  height: 25px;
-  line-height: 1;
-  padding: 0px 8px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  height: 25px;
+
+  padding: 0.2rem 0.5rem;
   &__title {
     display: flex;
     align-items: center;
     font-weight: bold;
     display: flex;
     flex-direction: column;
-    gap: 4px;
     justify-content: center;
+
+    h2 {
+      margin: 0;
+      //padding: 0.3rem 0.5rem;
+    }
     span {
       display: block;
     }
-  }
-}
-
-/* Windows Chrome and Edge-specific adjustments */
-// .windows-chrome-edge .UiHeader {
-//   height: 25px;
-//   &__title span {
-//     margin-top: 0;
-//   }
-// }
-
-.windows-chrome-edge .UiHeader {
-  &__title {
-    gap: 2px;
   }
 }
