--- a/src/components/UiScorecard/UiScorecard.scss
+++ b/src/components/UiScorecard/UiScorecard.scss
@@ -7,7 +7,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  font-size: 14px;
+  //  font-size: 14px;
   //  padding: 0.3rem 0.3rem 0.1rem;
   margin-bottom: 0.25rem;
 }
