--- a/src/components/UiSelect/UiSelect.scss
+++ b/src/components/UiSelect/UiSelect.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables";
 
 .UiSelect {
-  width: 120px;
+  width: 150px;
   border: 2px solid;
   border-color: $black $greyLightest $greyLightest $black;
 
@@ -18,7 +18,7 @@
 
   .UiSelect__placeholder,
   .UiSelect__single-value {
-    margin-top: 4px;
+    // margin-top: 4px;
   }
 
   .UiSelect__indicator {
@@ -31,7 +31,7 @@
 
   .UiSelect__indicator:before {
     content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='5' viewBox='0 0 10 5'%3E%3Cpath d='M0 0 L5 5 L10 0 Z' fill='%23ebdbb2'/%3E%3C/svg%3E");
-    transform: translate(-5px, -9px);
+    transform: translate(-5px, -15px);
   }
 
   .UiSelect__control {
@@ -46,19 +46,19 @@
   }
 
   .UiSelect__menu {
-    margin-top: 6px;
+    // margin-top: 6px;
     background: $greyLight;
     border: 1px solid $greyLightest;
     border-radius: 0 !important;
   }
 
   .UiSelect__menu-list {
-    padding-top: 0 !important;
-    padding-bottom: 0 !important;
+    // padding-top: 0 !important;
+    // padding-bottom: 0 !important;
     border-radius: 0 !important;
     background-color: $greyLight;
     .UiSelect__option {
-      padding: 2px 3px 0px 3px;
+      //  padding: 2px 3px 0px 3px;
     }
     .UiSelect__option--is-selected {
       padding: 2px 3px 0px 3px;
@@ -71,25 +71,5 @@
       background-color: $orange;
       color: $black;
     }
-  }
-}
-
-/* Windows Chrome and Edge-specific adjustments */
-.windows-chrome-edge .Header {
-  .UiSelect__single-value {
-    padding-top: 0 !important;
-  }
-}
-
-.windows-chrome-edge .UiSelect {
-  &__single-value {
-    margin-top: 0 !important;
-  }
-}
-
-.windows-chrome-edge .UiSelect {
-  &__indicator:before {
-    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='5' viewBox='0 0 10 5'%3E%3Cpath d='M0 0 L5 5 L10 0 Z' fill='%23ebdbb2'/%3E%3C/svg%3E");
-    transform: translate(-4px, -11px);
   }
 }
