--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,10 +1,12 @@
 @import url("https://fonts.cdnfonts.com/css/liberation-mono");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
-@font-face {
-  font-family: "Gohu";
-  src: url("../fonts/GohuFont14NerdFont-Regular.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap");
+
+$base-size: 16px;
+
+@function rem($pixels) {
+  @return calc($pixels / $base-size) * 1rem;
 }
 
 ::selection {
@@ -17,47 +19,52 @@ html {
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ol,
-ul,
-a,
-blockquote,
-.footer {
+body {
   font-family: $fontFamilySans;
-  color: $white;
-  font-size: 16px;
+  font-size: $base-size;
+  line-height: 1.5;
 }
 
-p,
-ul,
-ol,
-blockquote {
-  line-height: 1.4;
+h1 {
+  font-size: clamp(rem(22px), 3vw, rem(28px));
+  line-height: 1.3;
 }
 
-blockquote {
-  font-style: italic;
+h2 {
+  font-size: clamp(rem(18px), 4vw, rem(20px));
+  line-height: 1.3;
 }
 
-h1,
-h2,
-h3,
+h3 {
+  font-size: clamp(rem(16px), 3vw, rem(18px));
+  line-height: 1.3;
+}
+
 h4,
 h5,
 h6 {
-  font-weight: bold;
-  font-size: 16px;
+  font-size: rem(16px);
+  line-height: 1.5;
 }
+
+h1.site-title {
+  font-size: clamp(rem(24px), 4vw, rem(28px));
+  line-height: 1.1; // Reduced from 1.2
+  letter-spacing: -0.2px;
+  color: #282828 !important;
+}
+
+h2.section-heading-title {
+  font-size: clamp(rem(18px), 4vw, rem(20px));
+  line-height: 1.2;
+}
+
+// h2.child-heading {
+//   font-size: 18px;
+// }
 
 a {
   color: $aqua;
-  // font-weight: bold;
 }
 
 p code,
@@ -70,9 +77,4 @@ li code {
 code {
   font-size: 14px;
   font-family: $fontFamilyMono;
-}
-
-.byline {
-  font-weight: normal;
-  // font-style: italic;
 }
