--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
-$fontFamilySans: "Sys", sans-serif;
+$fontFamilySans: "IBM Plex Sans", sans-serif;
 //$fontFamilyMono: "Liberation Mono";
-$fontFamilyMono: "PP Mono Lig";
+$fontFamilyMono: "Jetbrains Mono";
 
 $dimYellow: #473c29;
 
@@ -12,9 +12,9 @@ $orange: #e78a4e;
 $red: #ea6962;
 $purple: #d3869b;
 
-// $white: #ebdbb2;
+$white: #ebdbb2;
 
-$white: #ddc7a1;
+// $white: #ddc7a1;
 
 $greyLightest: #a89984; // formerly `buttonHighlight`
 $greyLighter: #928374;
