--- a/src/components/UiDataTable/UiDataTable.scss
+++ b/src/components/UiDataTable/UiDataTable.scss
@@ -18,7 +18,7 @@
       grid-template-columns: 90px 60px 90px 80px 1fr;
       //      margin-bottom: 2px;
       .header {
-        max-height: 18px;
+        //        max-height: 18px;
         background-color: $greyDark;
         @include outset-border-darker;
         padding: 0px;
@@ -43,7 +43,7 @@
       display: grid;
       grid-template-columns: 90px 60px 90px 80px 1fr;
       margin: 0;
-      height: 18px;
+      //      height: 18px;
       max-height: 18px;
       .cell-content {
         padding: 0 0.35rem 0;
@@ -78,9 +78,8 @@
       overflow-x: auto;
 
       .cell-header {
-        max-height: 18px;
-        padding-bottom: 0;
-        height: 18px;
+        // max-height: 18px;
+        // height: 18px;
         background-color: $greyDark;
         @include outset-border-darker;
         padding-left: 0.25rem;
@@ -91,10 +90,10 @@
       .cell-content {
         margin-left: 10px;
         padding-bottom: 0;
-        // padding-top: 5px;
+        padding-top: 5px;
         // padding-bottom: 0;
-        max-height: 18px;
-        height: 18px;
+        //       max-height: 18px;
+        //       height: 18px;
       }
 
       &:nth-child(even) {
