--- a/src/components/UiHeader/UiHeader.scss
+++ b/src/components/UiHeader/UiHeader.scss
@@ -3,14 +3,14 @@
 
 .UiHeader {
   @include default-font;
-  @include outset-border;
+  //  @include outset-border;
   background-color: $greyDark;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 
-  padding: 0.2rem 0.5rem;
+  padding: 0.5rem;
   &__title {
     display: flex;
     align-items: center;
