--- a/src/components/UiGroup/UiGroup.scss
+++ b/src/components/UiGroup/UiGroup.scss
@@ -5,14 +5,13 @@
   @include default-font;
   max-width: 768px;
   margin-bottom: 1rem;
-
+  background: #282828;
   .content {
-    margin-top: 0.25rem;
+    // margin-top: 0.25rem;
     padding: 1rem;
-    // padding: 0.5rem 0.5rem;
-    border-left: 2px solid $grey;
-    border-right: 2px solid $grey;
-    border-bottom: 2px solid $grey;
+    // border-left: 2px solid $grey;
+    // border-right: 2px solid $grey;
+    // border-bottom: 2px solid $grey;
 
     .no-bottom-padding {
       padding-bottom: 0;
@@ -30,14 +29,20 @@
   //  line-height: 1.3;
 
   .content {
-    margin-top: 0.25rem;
+    //margin-top: 0.25rem;
     padding: 0.5rem 0.5rem;
-    border-left: 2px solid $grey;
-    border-right: 2px solid $grey;
-    border-bottom: 2px solid $grey;
+    // border-left: 2px solid $grey;
+    // border-right: 2px solid $grey;
+    // border-bottom: 2px solid $grey;
 
     .no-bottom-padding {
       padding-bottom: 0;
     }
+  }
+}
+
+@media (max-width: 576px) {
+  .UiGroup .content {
+    padding: 0.5rem;
   }
 }
