--- a/src/components/UiGroup/UiGroup.scss
+++ b/src/components/UiGroup/UiGroup.scss
@@ -8,7 +8,7 @@
   background: #282828;
   .content {
     // margin-top: 0.25rem;
-    padding: 1rem;
+    padding: 1em;
     // border-left: 2px solid $grey;
     // border-right: 2px solid $grey;
     // border-bottom: 2px solid $grey;
@@ -25,7 +25,7 @@
 
 .UiGroup__child {
   max-width: 768px;
-  margin-bottom: 1rem;
+  margin-bottom: 1em;
   //  line-height: 1.3;
 
   .content {
