--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -3,7 +3,7 @@
 
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap");
 
-$base-size: 14px;
+$base-size: 16px;
 
 @function rem($pixels) {
   @return calc($pixels / $base-size) * 1rem;
@@ -26,17 +26,17 @@ body {
 }
 
 h1 {
-  font-size: 28px;
+  font-size: clamp(rem(22px), 3vw, rem(28px));
   line-height: 1.3;
 }
 
 h2 {
-  font-size: 20px;
+  font-size: clamp(rem(18px), 4vw, rem(20px));
   line-height: 1.3;
 }
 
 h3 {
-  font-size: 18px;
+  font-size: clamp(rem(16px), 3vw, rem(18px));
   line-height: 1.3;
 }
 
@@ -48,14 +48,14 @@ h6 {
 }
 
 h1.site-title {
-  //  font-size: clamp(rem(24px), 4vw, rem(28px));
+  font-size: clamp(rem(24px), 4vw, rem(28px));
   line-height: 1.1; // Reduced from 1.2
   // letter-spacing: -0.2px;
   color: #282828 !important;
 }
 
 h2.section-heading-title {
-  //  font-size: clamp(rem(18px), 4vw, rem(20px));
+  font-size: clamp(rem(18px), 4vw, rem(20px));
   line-height: 1.2;
 }
 
@@ -71,12 +71,12 @@ a {
 
 p code,
 li code {
-  font-size: 12px;
+  font-size: 14px;
   color: $orange !important;
   background: transparent !important;
 }
 
 code {
-  font-size: 12px;
+  font-size: 14px;
   font-family: $fontFamilyMono;
 }
