style: add pagination to home page

--- a/src/components/UiHeader/UiHeader.scss
+++ b/src/components/UiHeader/UiHeader.scss
@@ -4,13 +4,15 @@
 .UiHeader {
   @include default-font;
   //  @include outset-border;
-  background-color: $greyDark;
+  background-color: $grey;
+  color: $white;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
 
   padding: 0.5rem;
+
   &__title {
     display: flex;
     align-items: center;
@@ -23,6 +25,7 @@
       margin: 0;
       //padding: 0.3rem 0.5rem;
     }
+
     span {
       display: block;
     }
