--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -63,6 +63,7 @@ h2.post__title {
   display: flex;
   flex-direction: row;
   gap: 1rem;
+
   @media (max-width: 576px) {
     flex-direction: column;
     gap: 0.5rem;
@@ -97,11 +98,13 @@ div.responsive-svg {
   //padding-left: 1rem;
   padding: 1rem;
   text-align: center;
+
   .caption {
     padding-top: 5px;
     font-size: 14px;
     max-width: 300px;
     font-style: italic;
+
     a {
       font-size: 14px;
     }
@@ -114,6 +117,7 @@ div.responsive-svg {
     float: none;
     padding: 0;
   }
+
   .caption {
     min-width: 100%;
     width: 100%;
@@ -127,6 +131,7 @@ div.responsive-svg {
   margin: 1rem 0;
   padding: 0.5rem;
   border: 2px solid $grey;
+
   * {
     margin-left: 1rem;
   }
@@ -145,4 +150,37 @@ div.responsive-svg {
   justify-content: space-between;
   border-bottom: 1px solid $grey;
   margin-bottom: 0.5rem;
+}
+
+.post-listing-body {
+  @media (min-width: 576px) {
+    height: calc(100vh - 350px);
+  }
+}
+
+.post-listing-footer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 2rem;
+  background: $grey;
+  color: $white;
+  font-weight: 500;
+
+  .button-active {
+    &:hover {
+      color: $aqua;
+    }
+  }
+
+  button {
+    @include strip-button-styles;
+    height: 100%;
+    padding: 0 1rem;
+    width: fit-content;
+    color: $white;
+  }
+
 }
