--- a/src/components/UiGroup/UiGroup.scss
+++ b/src/components/UiGroup/UiGroup.scss
@@ -6,8 +6,10 @@
   max-width: 768px;
   margin-bottom: 1rem;
   background: #282828;
+
   .content {
     // margin-top: 0.25rem;
+    //    height: calc(100vh - 200px);
     padding: 1rem;
     // border-left: 2px solid $grey;
     // border-right: 2px solid $grey;
