blog: self host 3 interim commit

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -69,6 +69,12 @@ a {
   font-weight: 600;
 }
 
+p a {
+
+  font-weight: 400;
+  text-decoration: underline;
+}
+
 p code,
 li code {
   font-size: 14px;
