--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-$fontFamilySans: "IBM Plex Sans", sans-serif;
+$fontFamilySans: "Open Sans", sans-serif;
 //$fontFamilyMono: "Liberation Mono";
 $fontFamilyMono: "Jetbrains Mono";
 
