--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -13,11 +13,12 @@ $borderLight: #fa9a5c;
   align-items: center;
   flex-direction: row;
   margin: 0 0 1rem;
+  border-radius: 3px;
   // border-width: 2px;
   // border-style: solid;
   // border-color: $borderLight $borderDark $borderDark $borderLight;
-  background-color: $orange;
-  padding: 0.5rem;
+  background-color: transparent;
+  padding: 0.35rem;
 
   a {
     text-decoration: none !important;
