--- a/src/components/UiGroup/UiGroup.scss
+++ b/src/components/UiGroup/UiGroup.scss
@@ -5,12 +5,13 @@
   @include default-font;
   max-width: 768px;
   margin-bottom: 1rem;
-  background: #282828;
+  //  background: #282828;
+  border-radius: 3px;
 
   .content {
     // margin-top: 0.25rem;
     //    height: calc(100vh - 200px);
-    padding: 1rem;
+    padding: 0.5rem;
     // border-left: 2px solid $grey;
     // border-right: 2px solid $grey;
     // border-bottom: 2px solid $grey;
