--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,9 +1,10 @@
 @import url("https://fonts.cdnfonts.com/css/liberation-mono");
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
-
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-$base-size: 16px;
+
+$base-size: 14px;
 
 @function rem($pixels) {
   @return calc($pixels / $base-size) * 1rem;
@@ -22,40 +23,40 @@ html {
 body {
   font-family: $fontFamilySans;
   font-size: $base-size;
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
 h1 {
-  font-size: clamp(rem(22px), 3vw, rem(28px));
-  line-height: 1.3;
+  font-size: clamp(rem(20px), 3vw, rem(24px));
+  line-height: 1.5;
 }
 
 h2 {
-  font-size: clamp(rem(18px), 4vw, rem(20px));
-  line-height: 1.3;
+  font-size: clamp(rem(16px), 4vw, rem(16px));
+  line-height: 1.5;
 }
 
 h3 {
-  font-size: clamp(rem(16px), 3vw, rem(18px));
-  line-height: 1.3;
+  font-size: clamp(rem(14px), 3vw, rem(14px));
+  line-height: 1.5;
 }
 
 h4,
 h5,
 h6 {
-  font-size: rem(16px);
+  font-size: rem(14px);
   line-height: 1.5;
 }
 
 h1.site-title {
-  font-size: clamp(rem(24px), 4vw, rem(28px));
+  font-size: clamp(rem(20px), 4vw, rem(24px));
   line-height: 1.1; // Reduced from 1.2
   // letter-spacing: -0.2px;
-  color: #282828 !important;
+  color: $orange !important;
 }
 
 h2.section-heading-title {
-  font-size: clamp(rem(18px), 4vw, rem(20px));
+  font-size: clamp(rem(16px), 4vw, rem(16px));
   line-height: 1.2;
 }
 
@@ -77,12 +78,12 @@ p a {
 
 p code,
 li code {
-  font-size: 14px;
+  font-size: 13px;
   color: $orange !important;
   background: transparent !important;
 }
 
 code {
-  font-size: 14px;
+  font-size: 13px;
   font-family: $fontFamilyMono;
 }
